Fixed anchor link bug
Fixed bug where page would scroll too far when clicking on a navbar link, page was not accounting for navbar's size

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -46,3 +46,10 @@ body {
   from{border-right-color: rgba(255,255,255,.75);}
   to{border-right-color: transparent;}
 }
+
+a.anchor {
+  display: block;
+  position: relative;
+  top: -90px;
+  visibility: hidden;
+}
